--- a/public/assets/portal/css/style.css
+++ b/public/assets/portal/css/style.css
@@ -447,10 +447,6 @@ button {
 #menu-active {
     color: #112149;
 }
-.board-menu-div {
-    display: inline-block;
-    position: relative;
-}
 .board-menu-option {
     color: #fff;
     padding: 2px 10px;
@@ -469,36 +465,6 @@ button {
 .board-menu option {
     color: #000;
     background: none;
-}
-.menu_header {
-    width: 200px;
-    position: absolute;
-    display: none;
-    z-index: 10;
-}
-.menu_comunica {
-    right: -85px;
-    top: 25px;
-}
-.menu_settings {
-    right: -85px;
-    top: 25px;
-}
-.menu_faq {
-    right: -45px;
-    top: 25px;
-}
-.menu_user {
-    right: 120px;
-    top: 35px;
-}
-.menu_account {
-    right: -30px;
-    top: 35px;
-}
-.menu-options {
-    padding: 12px 0;
-    position: relative;
 }
 .separator-line {
     border-bottom: 1px solid #ddd;
@@ -555,9 +521,9 @@ button {
     width: 0;
     height: 0;
     border-style: solid;
-    border-width: 0 20px 20px 20px;
+    border-width: 0px 0px 10px 10px;
     border-color: transparent transparent #fafafa transparent;
-    margin-top: 10px;
+    margin-top: 5px;
 }
 .menu_triangle_contend {
     background: #fafafa;
