--- a/public/assets/portal/newstyle/old.css
+++ b/public/assets/portal/newstyle/old.css
@@ -471,10 +471,6 @@
 .bet #menu-active {
   color: #112149;
 }
-.bet .board-menu-div {
-  display: inline-block;
-  position: relative;
-}
 .bet .board-menu-option {
   color: #fff;
   padding: 2px 10px;
@@ -493,36 +489,6 @@
 .bet .board-menu option {
   color: #000;
   background: none;
-}
-.bet .menu_header {
-  width: 200px;
-  position: absolute;
-  display: none;
-  z-index: 10;
-}
-.bet .menu_comunica {
-  right: -85px;
-  top: 25px;
-}
-.bet .menu_settings {
-  right: -85px;
-  top: 25px;
-}
-.bet .menu_faq {
-  right: -45px;
-  top: 25px;
-}
-.bet .menu_user {
-  right: 120px;
-  top: 35px;
-}
-.bet .menu_account {
-  right: -30px;
-  top: 35px;
-}
-.bet .menu-options {
-  padding: 12px 0;
-  position: relative;
 }
 .bet .separator-line {
   border-bottom: 1px solid #ddd;
@@ -580,9 +546,9 @@
   width: 0;
   height: 0;
   border-style: solid;
-  border-width: 0 20px 20px 20px;
+  border-width: 0px 0px 10px 10px;
   border-color: transparent transparent #fafafa transparent;
-  margin-top: 10px;
+  margin-top: 5px;
 }
 .bet .menu_triangle_contend {
   background: #fafafa;
