--- a/public/assets/portal/newstyle/style.css
+++ b/public/assets/portal/newstyle/style.css
@@ -471,10 +471,6 @@
 .bet #menu-active {
   color: #112149;
 }
-.bet .board-menu-div {
-  display: inline-block;
-  position: relative;
-}
 .bet .board-menu-option {
   color: #fff;
   padding: 2px 10px;
@@ -493,36 +489,6 @@
 .bet .board-menu option {
   color: #000;
   background: none;
-}
-.bet .menu_header {
-  width: 200px;
-  position: absolute;
-  display: none;
-  z-index: 10;
-}
-.bet .menu_comunica {
-  right: -85px;
-  top: 25px;
-}
-.bet .menu_settings {
-  right: -85px;
-  top: 25px;
-}
-.bet .menu_faq {
-  right: -45px;
-  top: 25px;
-}
-.bet .menu_user {
-  right: 120px;
-  top: 35px;
-}
-.bet .menu_account {
-  right: -30px;
-  top: 35px;
-}
-.bet .menu-options {
-  padding: 12px 0;
-  position: relative;
 }
 .bet .separator-line {
   border-bottom: 1px solid #ddd;
@@ -580,9 +546,9 @@
   width: 0;
   height: 0;
   border-style: solid;
-  border-width: 0 20px 20px 20px;
+  border-width: 0px 0px 10px 10px;
   border-color: transparent transparent #fafafa transparent;
-  margin-top: 10px;
+  margin-top: 5px;
 }
 .bet .menu_triangle_contend {
   background: #fafafa;
@@ -1500,7 +1466,7 @@
 .bs-wp .navbar-right {
   font-size: 12px;
   float: right;
-  padding-right: 10px;
+  padding-right: 25px;
 }
 .bs-wp .navbar-fright .brand-link,
 .bs-wp .navbar-right .brand-link {
@@ -1578,16 +1544,55 @@
 .bs-wp #saveLoginForm .btn-link:hover {
   color: #ffffff;
 }
-.bs-wp .menu_user {
-  right: -25px;
-  top: 28px;
+.bs-wp .board-menu-div {
+  display: inline-block;
+  position: relative;
 }
-.bs-wp .menu_account {
-  left: -25px;
-  top: 28px;
+.bs-wp .navbar-right .board-menu-div,
+.bs-wp .navbar-fright .board-menu-div {
+  position: inherit;
 }
-.bs-wp .menu_comunica {
-  right: -90px;
+.bs-wp .navbar-fright .menu_header {
+  top: 35px;
+}
+.bs-wp .menu_header {
+  width: 200px;
+  position: absolute;
+  display: none;
+  z-index: 10;
   top: 20px;
+}
+.bs-wp .menu_header.menu_user {
+  right: 0px;
+  top: 28px;
+}
+.bs-wp .menu_header.menu_user .menu_triangle {
+  margin-left: 80px;
+}
+.bs-wp .menu_header.menu_account {
+  left: 0px;
+  top: 28px;
+}
+.bs-wp .menu_header.menu_account .menu_triangle {
+  margin-left: 80px;
+}
+.bs-wp .menu_header.menu_faq {
+  right: 20px;
   z-index: 1010;
+}
+.bs-wp .menu_header.menu_faq .menu_triangle {
+  margin-left: 115px;
+}
+.bs-wp .menu_header.menu_comunica {
+  right: 20px;
+  z-index: 1010;
+}
+.bs-wp .menu_header.menu_comunica .menu_triangle {
+  margin-left: 143px;
+}
+.bs-wp .menu_header.menu_settings {
+  right: 20px;
+}
+.bs-wp .menu_header.menu_settings .menu_triangle {
+  margin-left: 170px;
 }
