--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -71,6 +71,9 @@
       .nav-onscroll {
         display: none;
       }
+      .nav-ontop {
+        padding-right: 20px;
+      }
       .board-menu-option {
         margin: 5px 0;
       }
