--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -282,6 +282,12 @@
         font-size: 9px;
       }
     }
+    &.menu_account{
+      width: 320px;
+      .menu_triangle_contend{
+        padding: 20px 5px 0px 5px;
+      }
+    }
     &.menu_faq {
       right: 20px;
       z-index: 1010;
