--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -146,6 +146,9 @@
           right: 10px;
         }
       }
+      .col-xs-2.nav-ontop{
+        padding-right: 10px;
+      }
       .nav-onscroll {
         padding-left: 0;
         padding-right: 5px;
@@ -153,6 +156,12 @@
         .menu_header {
           right: 10px;
         }
+      }
+    }
+
+    @media (max-width: @screen-md-max) {
+      .col-xs-2.nav-ontop{
+        padding-right: 7px;
       }
     }
     .navbar-collapse {
