--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -87,6 +87,9 @@
       border-radius: 0;
       padding: 10px 0;
       z-index: 1000;
+      .btn-brand{
+        text-transform: capitalize;
+      }
       .navbar-brand {
         height: 30px;
         padding: 0 5px;
