--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -280,6 +280,7 @@
     .botao-registar {
       width: 100%;
       font-size: 70%;
+      text-transform: capitalize;
     }
     @media (max-width: @screen-lg-max) {
       .botao-registar {
