--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -344,8 +344,13 @@
     display: none;
     z-index: 10;
     top: 15px;
+    .menu_triangle_contend {
+      border: 1px solid #ada9aa;
+    }
     .menu_triangle {
       margin-right: 0px;
+      margin-bottom: -1px;
+      position: relative;
     }
     .btn {
       margin-bottom: 10px;
