--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -441,4 +441,22 @@
       }
     }
   }
+  /* Colapse POP Panel */
+
+  &.brand-box-title {
+    padding: 0;
+
+    .main-logo {
+      visibility: hidden;
+    }
+    .brand-title {
+      margin-bottom: 0;
+      font-size: 16px;
+    }
+    .close {
+      margin-left: 13px;
+      margin-right: -13px;
+    }
+  }
+
 }
