--- a/public/assets/portal/newstyle/style.css
+++ b/public/assets/portal/newstyle/style.css
@@ -1344,6 +1344,7 @@
   /* Form Login */
   /* Align PopHovers */
   /* Colapse POP Panel */
+  /* Registo */
 }
 .bs-wp .btn-brand {
   background-color: transparent;
@@ -1744,4 +1745,40 @@
 .bs-wp.brand-box-title .close {
   margin-left: 13px;
   margin-right: -13px;
+}
+.bs-wp.form-registo .registo-form {
+  margin-left: 0;
+  position: relative;
+}
+.bs-wp.form-registo .registo-form input,
+.bs-wp.form-registo .registo-form > select {
+  width: 100%;
+}
+.bs-wp.form-registo .registo-form .brand-color span {
+  display: inline-block;
+  font-size: 10px;
+}
+.bs-wp.form-registo .registo-form i {
+  position: absolute;
+  top: 21px;
+  right: -15px;
+}
+.bs-wp.form-registo .registo-form p {
+  font-size: 10px;
+}
+.bs-wp.form-registo .grid {
+  overflow: hidden;
+}
+.bs-wp.form-registo .grid .row {
+  margin-left: -40px;
+  margin-right: -40px;
+}
+.bs-wp.form-registo .col-xs-4 {
+  padding: 0 40px;
+}
+.bs-wp.form-registo .middle {
+  border-left: 1px dashed #787878;
+  border-right: 1px dashed #787878;
+  margin-bottom: -99999px;
+  padding-bottom: 99999px;
 }
