--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -475,6 +475,9 @@
     .registo-form {
       margin-left: 0;
       position: relative;
+      label {
+        font-size: 12px;
+      }
       input,
       > select {
         width: 100%;
