Refactored all Regist Page, Step 1.

--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -475,6 +475,9 @@
     .registo-form {
       margin-left: 0;
       position: relative;
+      .brand-title {
+        font-size: 16px;
+      }
       label {
         font-size: 12px;
       }
