--- a/public/assets/portal/newstyle/style.css
+++ b/public/assets/portal/newstyle/style.css
@@ -1733,6 +1733,9 @@
   margin-left: 0;
   position: relative;
 }
+.bs-wp.form-registo .registo-form .brand-title {
+  font-size: 16px;
+}
 .bs-wp.form-registo .registo-form label {
   font-size: 12px;
 }
