--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -25,6 +25,7 @@
 .bet {
   .main-contend {
     margin-top: 120px;
+    padding-top: 15px;
   }
   .main-contend.standalone {
     margin-top: 50px;
@@ -445,15 +446,22 @@
 
   &.brand-box-title {
     padding: 0;
+    line-height: 30px;
 
     .main-logo {
       visibility: hidden;
+      img {
+        height: 30px;
+      }
     }
     .brand-title {
       margin-bottom: 0;
       font-size: 16px;
     }
     .close {
+      color: #dddddd;
+      opacity: 1;
+      font-size: 14px;
       margin-left: 13px;
       margin-right: -13px;
     }
@@ -466,7 +474,7 @@
     height: auto;
     .banner-back {
       img {
-        height: 480px;
+        height: 450px;
       }
     }
     .title-form-registo{
