--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -551,6 +551,26 @@
         padding: 3px;
         transition: all 0.4s ease 0s;
       }
+
+      .form-marcadores p {
+        width: 30px;
+        height: 30px;
+        line-height: 30px;
+        display: inline-block;
+        border-radius: 50%;
+        margin: 10px 15px;
+        border: 1px solid #bbb;
+        font-size: 16px;
+        font-weight: bold;
+        color: #ddd;
+      }
+      .form-submit {
+        margin-top: 10px;
+      }
+      .form-submit input {
+        line-height: 25px;
+        border-radius: 10px;
+      }
     }
   }
 }
