--- a/resources/assets/less/style.less
+++ b/resources/assets/less/style.less
@@ -499,10 +499,15 @@
       > select {
         width: 100%;
         font-size: 11px;
+        height: 25px;
+      }
+      > div > select {
+        width: 32%;
       }
       input[type="checkbox"]{
         width: auto;
         vertical-align: middle;
+        height: auto;
       }
       .brand-color {
         span{
